# TaC

./: .$tac_flow_chart_v1.1.drawio.dtmp  .gitignore  README.md  profile.prof  pyproject.toml  requirements.txt  run_simulation.py  tac.drawio  tac_flow_chart_v1.1.drawio  tac_flow_chart_v1.2.drawio
agent/: agent.py  agent_interface.py
simulation/: alone.py  analysis.ipynb  analysis.py  analysis_seb.ipynb  camera.py  experiments.py  explore.ipynb  main.py  state.py  test.py  utils.py  vision.cp312-win_amd64.pyd  window.py
simulation/animations/: animation.py  lerp.py  noanim.py
simulation/data/tests/: ndwadewtest_weights_fixed_120s_30.pkl  preferences_120s_30v_10vals.pkl  really_fixed_weights_fixed_120s_30.pkl  test_saved_df.pkl  weights_120s_100v.pkl  weights_test.pkl
simulation/entities/: agent.py  agent_interface.py  entity.py  thief.py
simulation/entities/agents/: agent.py  agent_actions.py  agent_interface.py  citizen.py  citizen_actions.py  test.py  thief.py  thief_actions.py
simulation/events/: event.py
simulation/world/: generation.py  grid.py  navigation.py  poi.py  test.py  vision_interface.py  world.py  world_interface.py
simulation/world/c_collision/: collision.c  collision.cp312-win_amd64.pyd  collision.pyx  compile_collision.py  compile_inplace.bat
simulation/world/c_nav/: compile_inplace.bat  compile_nav.py  navigation.c  navigation.cp312-win_amd64.pyd  navigation.pyx  pynav.py  test.py
simulation/world/c_vision/: compile_inplace.bat  compile_vision.py  vision.c  vision.pyx  (+1 more)
visualization/: visualization.py
world/: world.py
(+12 files in other folders)
