[tool.poetry]
name = "tac"
version = "0.1.0"
description = ""
authors = ["SebastianJitaru <sjitaru29@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
cython = "^3.0.11"
setuptools = "^75.1.0"
pandas = "^2.2.3"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
pygame = "2.6.0"
pygame-gui = "^0.6.12"
scipy = "1.14.1"
matplotlib = "3.9.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
